# onboarding

./: .gitmodules  CMakeLists.txt  Kconfig  README.md
boards/: rpi_pico_rp2040_w.overlay
doc/: Doxyfile
include/: ob_bluetooth.h  ob_bluetooth_gatt.h  ob_captive_portal.h  ob_certs.h  ob_nvs_data.h  ob_ota.h  ob_reboot.h  ob_web_server.h  ob_wifi.h  onboarding_bluetooth_gatt.h
src/: ob_bluetooth.c  ob_bluetooth_gatt.c  ob_captive_portal.c  ob_certs.c  ob_log.c  ob_nvs_data.c  ob_ota.c  ob_reboot.c  ob_shell.c  ob_web_server.c  ob_wifi.c  onboarding_bluetooth.c  onboarding_bluetooth_gatt.c
zephyr/: module.yml
